--- a/src/main/resources/templates/backend/paper/add.html
+++ b/src/main/resources/templates/backend/paper/add.html
@@ -17,9 +17,9 @@
             <div class="col-sm-8">
                 <input type="checkbox" id="single" value="单选题" name="type" />单选题&nbsp;&nbsp;
                 <input type="checkbox" id="many" value="多选题" name="type"/>多选题&nbsp;&nbsp;
-                <input type="checkbox" id="judge" value="判断" name="type"/>判断&nbsp;&nbsp;
-                <input type="checkbox" id="short" value="简答" name="type"/>简答&nbsp;&nbsp;
-                <input type="checkbox" id="application" value="应用" name="type"/>应用
+                <input type="checkbox" id="judge" value="判断题" name="type"/>判断题&nbsp;&nbsp;
+                <input type="checkbox" id="application" value="填空题" name="type"/>填空题&nbsp;&nbsp;
+                <input type="checkbox" id="short" value="简答题" name="type"/>简答题&nbsp;&nbsp;
             </div>
         </div>
         <div class="form-group">
