--- a/src/main/resources/templates/backend/paper/addlist.html
+++ b/src/main/resources/templates/backend/paper/addlist.html
@@ -19,8 +19,8 @@
                             <option value="单选题">单选题</option>
                             <option value="多选题">多选题</option>
                             <option value="判断题">判断题</option>
+                            <option value="填空题">填空题</option>
                             <option value="简答题">简答题</option>
-                            <option value="应用题">应用题</option>
                         </select>
                         </li>
                         <li>
