--- a/src/main/resources/templates/backend/paper/edit.html
+++ b/src/main/resources/templates/backend/paper/edit.html
@@ -24,8 +24,8 @@
 					   th:attr ="checked=${paper.type.contains('判断题')?true:false}"/>判断题&nbsp;&nbsp;
 				<input type="checkbox" id="short" value="简答题" name="type"
 					   th:attr ="checked=${paper.type.contains('简答题')?true:false}"/>简答题&nbsp;&nbsp;
-				<input type="checkbox" id="application" value="应用题" name="type"
-					   th:attr ="checked=${paper.type.contains('应用题')?true:false}"/>应用题
+				<input type="checkbox" id="application" value="填空题" name="type"
+					   th:attr ="checked=${paper.type.contains('填空题')?true:false}"/>应用题
 			</div>
 		</div>
 		<div class="form-group">
