--- a/src/main/resources/templates/backend/paper/qlist.html
+++ b/src/main/resources/templates/backend/paper/qlist.html
@@ -23,7 +23,7 @@
                             <option value="多选题">多选题</option>
                             <option value="判断">判断题</option>
                             <option value="简单">简答题</option>
-                            <option value="应用">应用题</option>
+                            <option value="填空">填空题</option>
                         </select>
                         </li>
                         <li>
