--- a/src/main/resources/templates/tlogin.html
+++ b/src/main/resources/templates/tlogin.html
@@ -27,6 +27,7 @@
             <input class="input_3" type="button" onclick="login()" value="登录" style="background-color: rgb(255, 255, 255); color: rgb(35, 39, 31);">
             <input class="input_3" type="button" onclick="document.form1.reset()" value="重置" style="background-color: rgb(255, 255, 255); color: rgb(35, 39, 31);"> 
      	</form>
+        <div th:include="include::footer"></div>
         <script th:src="@{/main/assets/js/jquery-1.11.1.min.js}"></script>
         <script type="text/javascript" th:src="@{/tblogin/js/script.js}"></script>
   
