--- a/src/main/resources/templates/backend/question/add.html
+++ b/src/main/resources/templates/backend/question/add.html
@@ -18,8 +18,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label ">题目标题：</label>
             <div class="col-sm-8">
-                <div id="div1" class="toolbar"> </div>
-                <div id="div2" class="text"></div>
+                <textarea name="title" placeholder="请输入题目标题..."></textarea>
             </div>
         </div>
         <div class="form-group">
@@ -27,9 +26,9 @@
             <div class="col-sm-8">
                 <input type="radio" id="single" value="单选题" name="type" />单选题&nbsp;&nbsp;
                 <input type="radio" id="many" value="多选题" name="type"/>多选题&nbsp;&nbsp;
-                <input type="radio" id="judge" value="判断" name="type"/>判断&nbsp;&nbsp;
-                <input type="radio" id="short" value="简答" name="type"/>简答&nbsp;&nbsp;
-                <input type="radio" id="application" value="应用" name="type"/>应用
+                <input type="radio" id="judge" value="判断题" name="type"/>判断题&nbsp;&nbsp;
+                <input type="radio" id="application" value="填空题" name="type"/>填空题&nbsp;&nbsp;
+                <input type="radio" id="short" value="简答题" name="type"/>简答题&nbsp;
             </div>
         </div>
         <div class="form-group">
@@ -73,29 +72,29 @@
 </div>
 <div th:include="include::footer"></div>
 <script th:src="@{/ajax/libs/select/select2.js}"></script>
-<script type="text/javascript" src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
+<script type="text/javascript" th:src="@{/js/plugins/wang/wangEditor.min.js}"></script>
 <script>
-    var E = window.wangEditor
-
-    var editor1 = new E('#div1', '#div2')
-    // 自定义菜单配置
-    editor1.customConfig.menus = [
-        'head',  // 标题
-        'bold',  // 粗体
-        'italic',  // 斜体
-        'underline',  // 下划线
-        'strikeThrough',  // 删除线
-        'foreColor',  // 文字颜色
-        'backColor',  // 背景颜色
-        'list',  // 列表
-        'justify',  // 对齐方式
-        'quote',  // 引用
-        'table',  // 表格
-        'code',  // 插入代码
-        'undo',  // 撤销
-        'redo'  // 重复
-    ]
-    editor1.create()
+    // var E = window.wangEditor
+    //
+    // var editor1 = new E('#div1', '#div2')
+    // // 自定义菜单配置
+    // editor1.customConfig.menus = [
+    //     'head',  // 标题
+    //     'bold',  // 粗体
+    //     'italic',  // 斜体
+    //     'underline',  // 下划线
+    //     'strikeThrough',  // 删除线
+    //     'foreColor',  // 文字颜色
+    //     'backColor',  // 背景颜色
+    //     'list',  // 列表
+    //     'justify',  // 对齐方式
+    //     'quote',  // 引用
+    //     'table',  // 表格
+    //     'code',  // 插入代码
+    //     'undo',  // 撤销
+    //     'redo'  // 重复
+    // ]
+    // editor1.create()
 
     $("#form-student-add").validate({
         rules:{
@@ -115,7 +114,7 @@
     }
 
     function add() {
-        var title = editor1.txt.text();
+        var title = $("textarea[name='title']").val();
         var optionA = $("input[name='optionA']").val();
         var optionB = $("input[name='optionB']").val();
         var optionC = $("input[name='optionC']").val();
