--- a/src/main/resources/templates/backend/question/edit.html
+++ b/src/main/resources/templates/backend/question/edit.html
@@ -25,11 +25,11 @@
 		<div class="form-group">
 			<label class="col-sm-3 control-label ">题型：</label>
 			<div class="col-sm-8">
-				<input type="radio" id="single" value="单选题" name="type" />单选题&nbsp;&nbsp;
-				<input type="radio" id="many" value="多选题" name="type"/>多选题&nbsp;&nbsp;
-				<input type="radio" id="judge" value="判断" name="type"/>判断&nbsp;&nbsp;
-				<input type="radio" id="short" value="简答" name="type"/>简答&nbsp;&nbsp;
-				<input type="radio" id="application" value="应用" name="type"/>应用
+				<input type="radio" id="single" value="单选题" name="type" th:attr ="checked=${question.type == '单选题'?true:false}"/>单选题&nbsp;&nbsp;
+				<input type="radio" id="many" value="多选题" name="type" th:attr ="checked=${question.type == '多选题'?true:false}"/>多选题&nbsp;&nbsp;
+				<input type="radio" id="judge" value="判断题" name="type" th:attr ="checked=${question.type == '判断题'?true:false}"/>判断题&nbsp;&nbsp;
+				<input type="radio" id="application" value="应用题" name="type" th:attr ="checked=${question.type == '应用题'?true:false}"/>填空题&nbsp;&nbsp;
+				<input type="radio" id="short" value="简答题" name="type" th:attr ="checked=${question.type == '简答题'?true:false}"/>简答题&nbsp;&nbsp;
 			</div>
 		</div>
 		<div class="form-group">
@@ -73,7 +73,7 @@
 </div>
 <div th:include="include::footer"></div>
 <script th:src="@{/ajax/libs/select/select2.js}"></script>
-<script type="text/javascript" src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
+<script type="text/javascript" th:src="@{/js/plugins/wang/wangEditor.min.js}"></script>
 <script th:inline="javascript">
     var text = [[${question.title}]];
     var E = window.wangEditor
