--- a/src/main/resources/templates/backend/question/question.html
+++ b/src/main/resources/templates/backend/question/question.html
@@ -22,9 +22,9 @@
                             <option value="">所有</option>
                             <option value="单选题">单选题</option>
                             <option value="多选题">多选题</option>
-                            <option value="判断">判断题</option>
-                            <option value="简单">简答题</option>
-                            <option value="应用">应用题</option>
+                            <option value="填空题">填空题</option>
+                            <option value="判断题">判断题</option>
+                            <option value="简答题">简答题</option>
                         </select>
                         </li>
                         <li>
