--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -43,7 +43,7 @@
                     <td>[[${exam.name}]]</td>
                     <td>[[${exam.startTime}]]</td>
                     <td>[[${exam.endTime}]]</td>
-                    <td><a th:href="'/student/detail/'+${exam.id}"
+                    <td><a th:onclick="'javascript:detailExam(\''+${exam.id}+'\');'"
                            class="layui-btn layui-btn-sm layui-btn-radius">立刻考试</a></td>
                 </tr>
                 </tbody>
@@ -51,7 +51,7 @@
         </div>
     </div>
 </div>
-
+<script th:src="@{/main/js/jquery-3.3.1.min.js}" type="text/javascript"></script>
 
 <script>
     //注意：导航 依赖 element 模块，否则无法进行功能性操作
@@ -60,6 +60,16 @@
 
         //…
     });
+    function detailExam(examId){
+        var detailUrl = '/student/detail/check/' + examId;
+        $.get(detailUrl, function(data){
+            if (data.code != 0){
+                alert("考试时间未到");
+            }else{
+                window.location.href='/student/detail/'+examId;
+            }
+        });
+    }
 </script>
 </body>
 </html>
